updated rider booking flow
